--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "fakerphp/faker": "^1.21",
         "ext-pdo": "*",
         "symfony/polyfill-uuid": "^1.27",
-      "ext-mbstring": "*"
+      "ext-mbstring": "*",
+      "ext-http": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1"
