--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "ext-pdo": "*",
         "symfony/polyfill-uuid": "^1.27",
       "ext-mbstring": "*",
-      "ext-http": "*"
+      "ext-http": "*",
+        "monolog/monolog": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1"
